force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/JBCXM__SurveyDistributionSchedule__c.object-meta.xml
<CustomObject>
    <description>This is used to store scheduling job details.</description>
    <label>Survey Distribution Schedule</label>
    <nameField>
        <label>Survey Distribution Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Distribution Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>