force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/fields/JBCXM__Date__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Date__c</fullName>
    <description>It represents when the schedule was created</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>