force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/fields/JBCXM__Description__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>