force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/fields/JBCXM__EmailBatchSize__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EmailBatchSize__c</fullName>
    <description>To specify the batch size.</description>
    <label>Email Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>