force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/fields/JBCXM__EmailFailCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EmailFailCount__c</fullName>
    <label>Email Fail Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>