force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/fields/JBCXM__JobId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__JobId__c</fullName>
    <description>To store the job Id after scheduling a job.</description>
    <label>Scheduled Job Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>