force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/fields/JBCXM__Reschedule__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Reschedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether the schedule is  to Send or  Resend emails.</description>
    <label>Reschedule</label>
    <type>Checkbox</type>
</CustomField>