force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/fields/JBCXM__SendAddress__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SendAddress__c</fullName>
    <label>Send Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>