force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/fields/JBCXM__StartDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__StartDate__c</fullName>
    <description>To specify when the schedule emails.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>