force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/fields/JBCXM__SurveyId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Id</label>
    <referenceTo>JBCXM__Survey__c</referenceTo>
    <relationshipLabel>Survey Distribution Schedule</relationshipLabel>
    <relationshipName>Survey_Distribution_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>