force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/fields/JBCXM__Template__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Template__c</fullName>
    <description>Template for resend</description>
    <label>Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>