force-app/main/default/objects/JBCXM__SurveyDistributionSchedule__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>JBCXM__EmailBatchSize__c</columns>
    <columns>NAME</columns>
    <columns>JBCXM__JobId__c</columns>
    <columns>JBCXM__StartDate__c</columns>
    <columns>JBCXM__PartcipantCount__c</columns>
    <columns>JBCXM__ProcessedCount__c</columns>
    <columns>JBCXM__Status__c</columns>
    <columns>JBCXM__SurveyId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>